--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,44 +1,21 @@
 body{
     .section{
         position: relative;
-        background-image: url('../img/background2.png');
+        background-image: url('../img/yes.jpeg');
         .component{
             width: 100px;
             height: 100px;
             opacity: 0;
-            &.first{
-                background-image: url('../img/logoIndex.png');
+            &.me {
+                background-image: url('../img/me.jpg');
             }
-            &.second{
-                background-image: url('../img/slogan.png');
+            &.me1 {
+                background-image: url('../img/me1.jpg');
             }
-            &.right{
-                background-image: url('../img/right.png');
-            }
-            &.left{
-                background-image: url('../img/left.png');
-            }
-            &.mind{
-                background-image: url('../img/mind.png');
-            }
-            &.dialog{
-                background-image: url('../img/dialog.png');
-            }
-            &.people{
-                background-image: url('../img/people.png');
-            }
-            &.bar1{
-                background-image: url('../img/bar.png');
-            }
-            &.polyline1{
-                background-image: url('../img/polyline.png');
-            }
-            &.pie1{
-                background-image: url('../img/pie.png');
+            &.title {
+                background-image: url('../img/titlebackground.png');
             }
         }
-        &.index{
-            background: url('../img/background1.png');
-        }
+        
     }
 }
