--- a/src/less/component.less
+++ b/src/less/component.less
@@ -24,6 +24,24 @@
     background-repeat: no-repeat;
     background-color: transparent;
     &.shake{
-        animation: move 2s infinite 1s;
+        animation: move 2s infinite 1s; 
     }
+    // color: #ededed;
+    // transition: 0.5s all ease;
+    // text-transform: uppercase;
+    // text-shadow: 
+    //     1px 1px #61b4de,
+    //     2px 2px #91c467,
+    //     3px 3px #f3a14b,
+    //     4px 4px #e84c50,
+    //     5px 5px #4e5965;
+    // &:hover{
+    //     color: #0a0a0a;
+    //     text-shadow: 
+    //         1px 1px #61b4de, 2px 2px #61b4de, 3px 3px #61b4de, 4px 4px #61b4de, 5px 5px #61b4de,
+    //         6px 6px #91c467, 7px 7px #91c467, 8px 8px #91c467, 9px 9px #91c467, 10px 10px #91c467,
+    //         11px 11px #f3a14b, 12px 12px #f3a14b, 13px 13px #f3a14b, 14px 14px #f3a14b, 15px 15px #f3a14b,
+    //         16px 16px #e84c50, 17px 17px #e84c50, 18px 18px #e84c50, 19px 19px #e84c50, 20px 20px #e84c50,
+    //         21px 21px #4e5965, 22px 22px #4e5965, 23px 23px #4e5965, 24px 24px #4e5965, 25px 25px #4e5965;
+    // }    
 }
